<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/label_personalData"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_firstname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPersonalData"
            android:text="@string/string_firstname" />

        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewPersonalData"
            android:layout_toRightOf="@+id/textview_firstname"
            android:ems="10"
            android:hint="@string/string_firstname" >

        </EditText>

        <TextView
            android:id="@+id/textview_lastname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edittext_firstname"
            android:text="@string/string_lastname" />

        <EditText
            android:id="@+id/edittext_lastname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edittext_firstname"
            android:layout_toRightOf="@+id/textview_lastname"
            android:ems="10"
            android:hint="@string/string_lastname" >

        </EditText>

        <TextView
            android:id="@+id/textview_matrikel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edittext_lastname"
            android:lines="2"
            android:text="@string/string_matrikel" />

        <EditText
            android:id="@+id/edittext_matrikel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edittext_lastname"
            android:layout_toRightOf="@+id/textview_matrikel"
            android:ems="10"
            android:hint="@string/string_matrikel" >

        </EditText>

        <TextView
            android:id="@+id/textViewGeoNamesData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edittext_matrikel"
            android:gravity="center_horizontal"
            android:text="@string/GeoNamesData"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewGeoNamesData"
            android:text="@string/string_username" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewGeoNamesData"
            android:layout_toRightOf="@+id/textview_username"
            android:ems="10"
            android:hint="@string/string_username" >

        </EditText>

        <TextView
            android:id="@+id/textview_seekbar_minvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edittext_username"
            android:padding="5dp"
            android:text="@string/string_minvalue" />

        <TextView
            android:id="@+id/textview_seekbar_maxvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edittext_username"
            android:padding="5dp"
            android:text="@string/string_maxvalue" />

        <SeekBar
            android:id="@+id/seekBar_number_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_username"
            android:layout_toLeftOf="@id/textview_seekbar_maxvalue"
            android:layout_toRightOf="@id/textview_seekbar_minvalue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:id="@+id/textview_seekbar_actualvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar_number_articles"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="" />

        <Button
            android:id="@+id/button_save_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seekBar_number_articles"
            android:text="@string/button_save" />
    </RelativeLayout>

</ScrollView>